<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        style="@style/ShowcardTextStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/irpan_afrizal_quiz_1"
        android:textColor="@color/white"
        android:textSize="35sp"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="494dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/oval_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Konsumen"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginTop="59dp"
        android:hint="@string/konsumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teksKonsumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TeksM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/jenis_kartu_membership"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Konsumen" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="348dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/oval_radio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeksM"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/rbPLATINUM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/platinum" />

        <RadioButton
            android:id="@+id/rbPREMIUM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/Premium" />

        <RadioButton
            android:id="@+id/rbVIP"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vip" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TeksKode"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:hint="@string/kode_barang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tekskodebarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TeksJumlahBarang"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:hint="@string/jumlah_barang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeksKode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teksJumlahbarangdibeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/TombolProses"
        android:layout_width="156dp"
        android:layout_height="58dp"
        android:text= "@string/proses"
        android:background="@drawable/oval_radio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeksJumlahBarang"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>
